<resources>
    <string name="app_name">OrderDinner_Android</string>

    <!-- Message -->
    <string name="msg_exit">再按一次退出程序</string>
    <string name="msg_not_empty">%1$s 不能为空</string>

    <!-- MainActivity -->
    <string name="tab_take_out">外卖</string>
    <string name="tab_orders">订单</string>
    <string name="tab_found">发现</string>
    <string name="tab_personal">我的</string>

    <!-- TakeOutFragment -->
    <string name="hint_address">请输入地址</string>
    
    <!-- PersonalFragment -->
    <string name="personal_fragment_title_text">我的</string>
    <string name="default_user_name">登录/注册</string>
    <string name="default_user_tel">登录后可享受更多特权</string>
    <string name="label_my_money">我的余额</string>
    <string name="default_my_money_num">0.00</string>
    <string name="default_my_money_unit">元</string>
    <string name="label_my_bonous">我的红包</string>
    <string name="default_my_bonous_num">0</string>
    <string name="default_my_bonous_unit">个</string>
    <string name="label_my_points">我的积分</string>
    <string name="default_my_points_num">0</string>
    <string name="default_my_points_unit">分</string>
    <string name="label_my_favorite">我的收藏</string>
    <string name="label_delicious_pictures">美食相册</string>
    <string name="label_points_center">积分商城</string>
    <string name="label_eleme_vip">饿配送会员卡</string>
    <string name="label_service_center">服务中心</string>
    <string name="label_support_eleme">喜欢饿了么？鼓励下</string>

    <!-- FoundFragment -->
    <string name="found_fragment_title_text">发现</string>
    <string name="label_points_center_sub">豪礼走在这里</string>
    <string name="label_groupon_nearby">附近团购</string>
    <string name="label_groupon_nearby_sub">出去吃饭也便宜</string>

    <!-- OrdersFragment -->
    <string name="orders_fragment_title_text">订单</string>
    <string name="breakfast_orders">早餐订单</string>
    <string name="listview_empty_hint">近一个月无订单记录</string>
    <string name="listview_empty_sub_hint">历史订单请登录网站ele.me查看</string>

    <!-- UserLoginActivity -->
    <string name="user_login_activity_title_text">登录</string>
    <string name="user_register">注册</string>
    <string name="hint_user_identity">手机/邮箱/用户名</string>
    <string name="hint_user_pwd">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="forget_pwd_text">忘记密码？</string>
    <string name="message_login_text">短信验证码登录</string>
    <string name="qq_login_text">QQ</string>
    <string name="weibo_login_text">微博</string>
    <string name="weixin_login_text">微信</string>
    <string name="third_party_login">第三方登录</string>

    <!-- UserRegisterActivity -->
    <string name="user_register_activity_title_text">注册</string>
    <string name="hint_user_tel">手机号</string>
    <string name="hint_invite_code">邀请码（选填）</string>
    <string name="register_next_step_btn_text">下一步，获取验证码</string>
    <string name="label_service_agreemnet">注册代表同意</string>
    <string name="service_agreemnet_name">《用户服务协议》</string>

    <!-- IdentifyingCodeActivity -->
    <string name="identifying_code_activity_title_text">注册</string>
    <string name="label_user_tel">验证码已发送至手机</string>
    <string name="hint_identifying_code">验证码</string>
    <string name="reget_identifying_code">重新获取</string>
    <string name="havesend_identifying_code">已发送(%1$ds)</string>
    <string name="register_complete_btn_text">完成注册</string>
    <string name="label_voice_indentifying">收不到短信？使用</string>
    <string name="voice_indentifying">语音验证码</string>
    <string name="getting_identifying_code">发送中...</string>
</resources>
